# human-diversity-reference

./: .dockerignore  .gitignore  Citation.cff  LICENSE  Makefile  README.md  pyproject.toml
bundle/: CC-BY-4.0-LICENSE  README.md
clusters/: create.sh
scripts/: compute_haplotype_statistics.py  compute_haplotypes.py  compute_variation_ratios.py  create_fasta_and_index.py  create_gnomad_sites_vcf.py  extract_gnomad_afs.py  index_all.sh  remap_divref.py  rewrite_fasta.py  test_haplotype_generation.py  test_indexing.py
